# tick_backtest

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  mkdocs.yml
config/backtest/: default_backtest.yaml  local_default_backtest.yaml.example  test_backtest.yaml
config/metrics/: local_default_metrics.yaml.example  test_metrics.yaml
config/strategy/: default_strategy.yaml  local_default_strategy.yaml.example  test_strategy.yaml
docs/: analysis.md  architecture.md  concepts.md  configs.md  index.md  quickstart.md
docs/configs/: metrics.md  strategy.md
docs/dev/: internals.md  style_guide.md
docs/js/: mermaid-init.js
scripts/: golden_run.sh  run_backtest.py  run_metric_stratification.py  smoke_test.sh
src/tick_backtest/: __init__.py  _build.py  exceptions.py  logging_utils.py
src/tick_backtest/analysis/: __init__.py  backtest_analysis.py  trade_analysis.py  trade_visualizer.py
tests/: README.md  __init__.py  conftest.py
tests/analysis/: test_backtest_analysis.py  test_metric_stratification_analysis.py  test_metric_stratification_workflow.py  test_trade_analysis.py
tests/backtest/: test_backtest.py  test_backtest_coordinator.py
tests/data_feed/: test_data_feed.py  test_tick_validation.py
tests/helpers/: metrics_reference.py  parquet.py
tests/integration/: test_backtest_run.py
tests/metrics/: test_cython_primitives.py  test_metrics_manager.py
tests/position/: test_position.py
tests/signals/: test_entry_engines.py  test_signal_generator.py
(+102 files in other folders)
