# Copyright 2025 Edward Clewer
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
  "setuptools>=68",
  "wheel",
  "cython>=3.0",
  "numpy>=1.26,<3.0",
  "pybind11>=2.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "tick-backtest"
version = "0.0.1"
description = "Local backtesting toolkit with Cython-accelerated primitives."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tick Backtest Team" }]
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.26,<3.0",
  "pandas>=1.5,<2.3",
  "pyarrow>=10.0,<16.0",
  "matplotlib>=3.7,<3.9",
  "pyyaml>=6.0,<6.1",
]

[project.optional-dependencies]
tests = ["pytest>=8.0,<9.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tick_backtest*"]
exclude = ["tick_backtest.__pycache__*"]

[tool.setuptools.package-data]
"tick_backtest" = [
  "config/**/*.yaml",
  "metrics/**/*.pyx",
  "metrics/**/*.pxd",
  "metrics/**/*.c",
  "data_feed/**/*.pyx",
  "data_feed/**/*.pxd",
  "data_feed/**/*.c",
]
